--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1454.0",
+    "axios": "^1.5.0",
     "material-react-table": "^1.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
